# material_server

./: .gitignore  .pylintrc  LICENSE  Material_database.sql  README.md  categories.json  generator.py  logger.conf  loginit.py  material.log.1  material.log.2  material_db.py  material_db_service.py  material_json_service.py  material_loader.py  material_plugin.py  material_service.py  model.py  model_encoder.py  model_old.py  plugin_loader.py  pylintrc  pyproject.toml  repository.py  requirements.txt  runserver.py  runserver_waitress.py  sqlite_repository.py  test_data.sql  test_database.sql  util.py  view_category.py  voc_generator.py  words.csv
api/books/: books_api.py
api/questions/: qa_api.py
data/: category_schema.json  categorydb_schema.json  db.json  groups.json
model/: category.py  item.py
plugins/books/: book_loader.py
plugins/vocabulary/: db_words.py  import_csv.py  loader.py  process_db.py  service.py  test.db  vocabulary.py  vocabulary_db.py
test/: Generator_test.py  Group_test.py  Model_test.py  Utils_test.py  api.ps1  book_loader_test.py  books_api_test.py  categories.json  category.json  material_db_service_test.py  material_loader_test.py  material_service_test.py  model_serialize_test.py  repository_test.py  service_test.py  vocabulary_db_test.py  vocabulary_test.py
test/data/: Las moscas y la miel.json  book.txt  book_lines.txt  book_lines_mixed.txt  categories.json  categories_new.json  categories_test_data.csv  current.json  db_test.json  db_test_2.json  groups.json  old_categories.json  words_test_data.csv
(+3 files in other folders)
