[tool.poetry]
name = "material-server"
version = "0.1.0"
description = "Server for learning materials"
authors = ["Antonio Simón <ascasse@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
Flask-Cors = "^4.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
